--- a/ArchivosJSON.ipynb
+++ b/ArchivosJSON.ipynb
@@ -1700,17 +1700,20 @@
     {
       "cell_type": "code",
       "source": [
-        "columnas = [\"/content/drive/MyDrive/UPC/TP1/speechrecognition/CertificacionTest/a.wav\",\"/content/drive/MyDrive/UPC/TP1/speechrecognition/CertificacionTest/b.wav\",\"/content/drive/MyDrive/UPC/TP1/speechrecognition/CertificacionTest/c.wav\"]\n",
+        "#Las direcciones que salen varian\n",
+        "columnas = [\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/Pausa.wav\",\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/Reiniciar.wav\",\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/Salir.wav\",\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/Reanudar.wav\"]\n",
         "index = 0\n",
         "\n",
-        "data_json[\"pausa\"] = \"\"\n",
-        "data_json[\"reiniciar\"] = \"\"\n",
-        "data_json[\"cerrar\"] = \"\"\n",
-        "data_json[\"reanudar\"] = \"\"\n",
+        "data_json = []\n",
+        "\n",
+        "#La direccion ue sale puede cambiar\n",
+        "model = SpeechRecognition.load_from_checkpoint(\"/content/drive/MyDrive/OctavoCiclo/TDP/modelo/Modelo_30ep_thirdTrain_part2.pt\")\n",
+        "trainer = flash.Trainer()\n",
         "for k in columnas:\n",
-        "\tdatamodule = SpeechRecognitionData.from_files(predict_files=[k], batch_size=4)\n",
-        "\tpredictions = trainer.predict(model, datamodule=datamodule)\n",
-        "\tdata_json[predictions[0][0]].push({\"value\":index,\"key\":predictions[0][0]})\n",
+        "  datamodule = SpeechRecognitionData.from_files(predict_files=[k], batch_size=4)\n",
+        "  predictions = trainer.predict(model, datamodule=datamodule)\n",
+        "  data_json[0].append({\"value\":index,\"key\":predictions[0][0]})\n",
+        "  index = index + 1\n",
         "\n",
         "json_object = json.dumps(data_json, indent = 4) \n",
         "print (json_object)"
