JSON file for "Damas" fixed

--- a/ArchivosJSON.ipynb
+++ b/ArchivosJSON.ipynb
@@ -1619,24 +1619,29 @@
     {
       "cell_type": "code",
       "source": [
-        "columnas = [\"/content/drive/MyDrive/UPC/TP1/speechrecognition/CertificacionTest/a.wav\",\"/content/drive/MyDrive/UPC/TP1/speechrecognition/CertificacionTest/b.wav\",\"/content/drive/MyDrive/UPC/TP1/speechrecognition/CertificacionTest/c.wav\"]\n",
+        "#Las direcciones que salen cambian\n",
+        "columnas = [\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/a.wav\",\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/be.wav\",\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/ce.wav\",\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/de.wav\",\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/e.wav\",\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/efe.wav\",\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/ge.wav\",\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/ache.wav\"]\n",
         "index = 0\n",
         "\n",
-        "data_json[\"columnas\"] = []\n",
-        "data_json[\"filas\"] = []\n",
-        "for k in columnas:\n",
-        "\tdatamodule = SpeechRecognitionData.from_files(predict_files=[k], batch_size=4)\n",
-        "\tpredictions = trainer.predict(model, datamodule=datamodule)\n",
-        "\tdata_json[\"columnas\"].push({\"value\":index,\"key\":predictions[0][0]})\n",
-        "\tindex++\n",
+        "# 0 is columns and 1 is rows\n",
+        "data_json = [[],[]]\n",
+        "model = SpeechRecognition.load_from_checkpoint(\"/content/drive/MyDrive/OctavoCiclo/TDP/modelo/Modelo_30ep_thirdTrain_part2.pt\")\n",
+        "trainer = flash.Trainer()\n",
         "\n",
-        "filas = [\"/content/drive/MyDrive/UPC/TP1/speechrecognition/CertificacionTest/a.wav\",\"/content/drive/MyDrive/UPC/TP1/speechrecognition/CertificacionTest/b.wav\",\"/content/drive/MyDrive/UPC/TP1/speechrecognition/CertificacionTest/c.wav\"]\n",
+        "for k in columnas:\n",
+        "  datamodule = SpeechRecognitionData.from_files(predict_files=[k], batch_size=4)\n",
+        "  predictions = trainer.predict(model, datamodule=datamodule)\n",
+        "  data_json[0].append({\"value\":index,\"key\":predictions[0][0]})\n",
+        "  index = index + 1\n",
+        "\n",
+        "#Los Links que salen tanto en columnas como filas varian del drive de la persona\n",
+        "filas = [\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/uno.wav\",\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/dos.wav\",\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/tres.wav\",\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/cuatro.wav\",\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/cinco.wav\",\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/seis.wav\",\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/siete.wav\",\"/content/drive/MyDrive/OctavoCiclo/TDP/speechrecognition/CertificationTest/ocho.wav\"]\n",
         "index = 0\n",
         "for k in filas:\n",
-        "\tdatamodule = SpeechRecognitionData.from_files(predict_files=[k], batch_size=4)\n",
-        "\tpredictions = trainer.predict(model, datamodule=datamodule)\n",
-        "\tdata_json[\"filas\"].push({\"value\":index,\"key\":predictions[0][0]})\n",
-        "\tindex+=3\n",
+        "  datamodule = SpeechRecognitionData.from_files(predict_files=[k], batch_size=4)\n",
+        "  predictions = trainer.predict(model, datamodule=datamodule)\n",
+        "  data_json[1].append({\"value\":index,\"key\":predictions[0][0]})\n",
+        "  index = index + 8\n",
         "\n",
         "json_object = json.dumps(data_json, indent = 4) \n",
         "print (json_object)\n"
